--- a/client/src/components/Keyboard/Keyboard.scss
+++ b/client/src/components/Keyboard/Keyboard.scss
@@ -1,39 +1,73 @@
 .keyboard {
-  backdrop-filter: blur(10px);
-  background: rgba(82, 56, 106, 0.298);
   border-radius: 15px;
-
   font-size: 1.5rem;
+  width: 100%;
+  flex: 0 0 50%;
 
   &__container {
-    padding: 50px;
-    width: 940px;
     display: flex;
     flex-direction: column;
-    gap: 7px;
+    align-items: center;
+    gap: min(8px, 0.7vw);
     margin: 0 auto;
   }
 
   &__row {
     width: 100%;
     display: flex;
-    gap: 7px;
+    gap: min(8px, 0.7vw);
+    flex-grow: 0;
+
+    &:nth-last-child(1) {
+      width: 50%;
+    }
   }
 
   &__btn {
-    width: 51px;
-    height: 51px;
+    width: min(3.9vw, 54px);
+    height: min(3.9vw, 54px);
     border-radius: 10px;
     cursor: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__mistakeKey {
+    backdrop-filter: blur(10px);
+    background: #ffffff3b;
   }
 }
 
-.highlight {
-  transform: translate(0, -3px);
-  height: 53px;
-  border: 2px solid #23de19;
-  border-bottom: 6px solid #23de19;
+@media screen and (max-width: 1015px) {
+  .keyboard {
+    display: none;
+  }
+
 }
+
+.highlight {
+  border: 4px solid #5dcd59e7;
+  border-bottom: 6px solid #5dcd59e7;
+}
+
+.missprint {
+  position: relative;
+  overflow: hidden;
+
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 0, 0, 0.617);
+    z-index: -1;
+  }
+}
+
 
 .functional_btn {
   flex-grow: 1;
