--- a/client/src/components/TypingSection/TypingSection.scss
+++ b/client/src/components/TypingSection/TypingSection.scss
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   height: 100svh;
-  justify-content: space-evenly;
+  gap: 7%;
+  align-items: center;
+  justify-content: center;
+  flex: 1 1 100%;
 }
