--- a/client/src/styles/reset.css
+++ b/client/src/styles/reset.css
@@ -1,58 +1,58 @@
 * {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  font-family: "Neucha";
-  font-weight: 600;
-  font-family: Nunito, sans-serif;
-  box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   border: 0;
+   font-family: "Neucha";
+   font-weight: 400;
+   font-family: Nunito, sans-serif;
+   box-sizing: border-box;
 }
 
 body {
-  background: #08011eed;
+   background: #08011eed;
 }
 
 
 *,
 *:before,
 *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 :focus,
 :active {
-  outline: none;
+   outline: none;
 }
 
 a:focus,
 a:active {
-  outline: none;
+   outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-  display: block;
+   display: block;
 }
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  font-style: 100%;
-  line-height: 100%;
+   height: 100%;
+   width: 100%;
+   font-style: 100%;
+   line-height: 100%;
 }
 
 
 
 button,
 textarea {
-  font-family: inherit;
-  font-size: inherit;
-  background-color: inherit;
+   font-family: inherit;
+   font-size: inherit;
+   background-color: inherit;
 }
 
 
@@ -61,38 +61,39 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-transition-delay: 99999s;
+   -webkit-transition-delay: 99999s;
 }
 
 input::-ms-clear {
-  display: none;
+   display: none;
 }
 
 button {
-  cursor: pointer;
+   cursor: pointer;
+   color: white
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+   padding: 0;
+   border: 0;
 }
 
 a,
 a:visited {
-  text-decoration: none;
-  color: inherit;
+   text-decoration: none;
+   color: inherit;
 }
 
 a:hover {
-  text-decoration: none;
+   text-decoration: none;
 }
 
 ul li {
-  list-style-type: none;
+   list-style-type: none;
 }
 
 img {
-  vertical-align: top;
+   vertical-align: top;
 }
 
 h1,
@@ -101,7 +102,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-style: inherit;
-  font-weight: 400;
-  line-height: 100%;
+   font-style: inherit;
+   font-weight: 400;
+   line-height: 100%;
 }
