--- a/client/src/UI/container/Container.module.css
+++ b/client/src/UI/container/Container.module.css
@@ -1,9 +1,8 @@
-.Container {
+.container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: min(93vw, 1240px);
    margin: 0 auto;
-   gap: max(10%, 10px);
    align-items: center;
 }
