--- a/client/src/components/Keyboard/Keyboard.scss
+++ b/client/src/components/Keyboard/Keyboard.scss
@@ -1,109 +1,109 @@
 .keyboard {
-  border-radius: 15px;
-  font-size: 1.5rem;
-  width: 100%;
-  flex: 0 0 50%;
+   border-radius: 15px;
+   font-size: 1.5rem;
+   width: 100%;
+   flex: 0 0 50%;
 
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: min(8px, 0.7vw);
-    margin: 0 auto;
-  }
+   &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: min(8px, 0.7vw);
+      margin: 0 auto;
+   }
 
-  &__row {
-    width: 100%;
-    display: flex;
-    gap: min(8px, 0.7vw);
-    flex-grow: 0;
+   &__row {
+      width: 100%;
+      display: flex;
+      gap: min(8px, 0.7vw);
+      flex-grow: 0;
 
-    &:nth-last-child(1) {
-      width: 50%;
-    }
-  }
+      &:nth-last-child(1) {
+         width: 50%;
+      }
+   }
 
-  &__btn {
-    width: min(3.9vw, 54px);
-    height: min(3.9vw, 54px);
-    border-radius: 10px;
-    cursor: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+   &__btn {
+      width: 54px;
+      height: 54px;
+      border-radius: 10px;
+      cursor: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
 
-  &__mistakeKey {
-    backdrop-filter: blur(10px);
-    background: #ffffff3b;
-  }
+   &__mistakeKey {
+      backdrop-filter: blur(10px);
+      background: #ffffff3b;
+   }
 }
 
 @media screen and (max-width: 1015px) {
-  .keyboard {
-    display: none;
-  }
+   .keyboard {
+      display: none;
+   }
 
 }
 
 .highlight {
-  border: 4px solid #5dcd59e7;
-  border-bottom: 6px solid #5dcd59e7;
+   border: 4px solid #5dcd59e7;
+   border-bottom: 6px solid #5dcd59e7;
 }
 
 .missprint {
-  position: relative;
-  overflow: hidden;
+   position: relative;
+   overflow: hidden;
 
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(255, 0, 0, 0.617);
-    z-index: -1;
-  }
+   &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(255, 0, 0, 0.617);
+      z-index: -1;
+   }
 }
 
 
 .functional_btn {
-  flex-grow: 1;
-  font-size: 1rem;
+   flex-grow: 1;
+   font-size: 1rem;
 }
 
 .purple {
-  background: #d59ef3de;
-  color: #2a0a3b;
+   background: #d59ef3de;
+   color: #2a0a3b;
 }
 
 .red {
-  background: #f8c9c9;
-  color: #8c2222;
+   background: #f8c9c9;
+   color: #8c2222;
 }
 
 .blue {
-  background: #a9d7fd;
-  color: #203b51;
+   background: #a9d7fd;
+   color: #203b51;
 }
 
 .green {
-  background: #caf3d3;
-  color: #14421d;
+   background: #caf3d3;
+   color: #14421d;
 }
 
 .yellow {
-  background: #ede8b2;
-  color: #474212;
+   background: #ede8b2;
+   color: #474212;
 }
 
 .grey {
-  background: #e3e3e38c;
+   background: #e3e3e38c;
 }
 
 .spaceBtn {
-  flex: 0 0 45%;
-  margin: 0 auto;
+   flex: 0 0 45%;
+   margin: 0 auto;
 }
