--- a/client/src/components/InputSection/InputText.scss
+++ b/client/src/components/InputSection/InputText.scss
@@ -56,6 +56,7 @@
 
 .opponentCursor {
    position: relative;
+   transition: 1s;
 
    &::before {
       content: "";
@@ -65,7 +66,8 @@
       top: 0;
       left: 0;
       background: linear-gradient(180deg, #c81f1f 50%, #000000f0 100%);
-      animation: cursorBlink 1s infinite;
+      // animation: cursorBlink 0.2s infinite;
+      transition: 1s;
    }
 }
 
