--- a/client/src/UI/container/Container.module.css
+++ b/client/src/UI/container/Container.module.css
@@ -1,8 +1,9 @@
 .container {
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
+   justify-content: center;
    max-width: min(93vw, 1240px);
-   margin: 0 auto;
    align-items: center;
+   min-width: 100%;
+   height: 100%;
 }
