--- a/client/src/components/Score/Score.scss
+++ b/client/src/components/Score/Score.scss
@@ -1,7 +1,8 @@
 .score {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+   display: flex;
+   flex-direction: column;
+   // align-items: center;
+   justify-content: center;
+   color: white;
+   gap: 20px;
 }
