--- a/client/src/components/TypingSection/TypingSection.scss
+++ b/client/src/components/TypingSection/TypingSection.scss
@@ -4,6 +4,6 @@
    align-items: center;
    height: 90vh;
    justify-content: space-evenly;
-   max-width: 900px;
+   width: 850px;
    margin: 0 auto;
 }
