--- a/client/src/UI/container/Container.module.css
+++ b/client/src/UI/container/Container.module.css
@@ -3,7 +3,13 @@
    flex-direction: column;
    justify-content: center;
    max-width: min(93vw, 1240px);
-   align-items: center;
-   min-width: 100%;
    height: 100%;
+   flex-grow: 1;
+}
+
+.wrapper {
+   display: flex;
+   min-width: 100%;
+   align-items: center;
+   justify-content: center;
 }
