--- a/client/src/UI/container/Container.module.css
+++ b/client/src/UI/container/Container.module.css
@@ -1,9 +1,8 @@
 .container {
    display: flex;
    flex-direction: column;
-   justify-content: center;
-   max-width: min(93vw, 1240px);
-   height: 100%;
+   max-width: min(93vw, 1140px);
+   min-height: 100svh;
    flex-grow: 1;
 }
 
