--- a/client/src/components/Auth/AuthForm.scss
+++ b/client/src/components/Auth/AuthForm.scss
@@ -1,31 +1,30 @@
 .authForm {
-  max-width: 600px;
-  margin: 10vh auto;
-  padding: 50px;
-  /* min-height: 80vh; */
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  backdrop-filter: blur(10px);
-  background: #199b7611;
-  border-radius: 10px;
+   max-width: 600px;
+   margin: 10vh auto;
+   padding: 50px;
+   justify-content: center;
+   display: flex;
+   flex-direction: column;
+   gap: 30px;
+   backdrop-filter: blur(10px);
+   background: var(--modal-bg-color);
+   border-radius: 10px;
 
-  &__buttons {
-    display: flex;
-    justify-content: space-evenly;
+   &__buttons {
+      display: flex;
+      justify-content: space-evenly;
 
-    & button {
-      padding: 5px 15px;
-      background: inherit;
-    }
-  }
+      & button {
+         padding: 5px 15px;
+         background: inherit;
+      }
+   }
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
+   &__item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+   }
 
 }
