--- a/client/src/components/Keyboard/Keyboard.scss
+++ b/client/src/components/Keyboard/Keyboard.scss
@@ -1,21 +1,22 @@
 .keyboard {
    border-radius: 15px;
-   font-size: 1.5rem;
+   font-size: 1.8rem;
    width: 100%;
-   flex: 0 0 50%;
+   width: 1000px;
+
 
    &__container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: min(8px, 0.7vw);
+      gap: 10px;
       margin: 0 auto;
    }
 
    &__row {
       width: 100%;
       display: flex;
-      gap: min(8px, 0.7vw);
+      gap: 10px;
       flex-grow: 0;
 
       &:nth-last-child(1) {
@@ -28,13 +29,14 @@
    }
 
    &__btn {
-      width: 52px;
-      height: 52px;
+      width: 60px;
+      height: 60px;
       border-radius: 10px;
       cursor: auto;
       display: flex;
       justify-content: center;
       align-items: center;
+      color: #000000c9;
    }
 
    &__mistakeKey {
@@ -43,22 +45,41 @@
    }
 }
 
-@media screen and (max-width: 1015px) {
+@media screen and (max-width: 1090px) {
+   .keyboard {
+      width: 800px;
+      font-size: 1.3rem;
+
+      &__container {
+         gap: min(10px, 0.7vw);
+      }
+
+      &__row {
+         gap: min(10px, 0.7vw);
+      }
+
+      &__btn {
+         width: 50px;
+         height: 50px;
+      }
+   }
+}
+
+@media screen and (max-width: 860px) {
    .keyboard {
       display: none;
    }
-
 }
+
 
 .highlight {
-   border: 4px solid #5dcd59e7;
-   border-bottom: 6px solid #5dcd59e7;
+   border: 5px outset #00ff37;
+   color: rgb(125, 252, 125)
 }
 
-.missprint {
+.misprint {
    position: relative;
    overflow: hidden;
-
 
    &::before {
       content: "";
@@ -79,32 +100,27 @@
 }
 
 .purple {
-   background: #d59ef3de;
-   color: #2a0a3b;
+   background: #c76ef7de;
 }
 
 .red {
-   background: #f8c9c9;
-   color: #8c2222;
+   background: #ff8c8c;
 }
 
 .blue {
-   background: #a9d7fd;
-   color: #203b51;
+   background: #62b4f8;
 }
 
 .green {
-   background: #caf3d3;
-   color: #14421d;
+   background: #88f7a0;
 }
 
 .yellow {
-   background: #ede8b2;
-   color: #474212;
+   background: #f7ed83;
 }
 
 .grey {
-   background: #e3e3e38c;
+   background: #e3e3e352;
 }
 
 .spaceBtn {
